[gd_scene load_steps=45 format=3 uid="uid://bwxjyl45tcn32"]

[ext_resource type="Texture2D" uid="uid://s4ftu6ck0bn8" path="res://HDR_multi_nebulae_1.hdr" id="1_a202f"]
[ext_resource type="Script" uid="uid://05u3xwl0k04c" path="res://game.gd" id="1_c3trs"]
[ext_resource type="Shader" uid="uid://dmtqobiv82yi0" path="res://shader/dither.gdshader" id="1_ogsp2"]
[ext_resource type="Script" uid="uid://bw22lud18xdmm" path="res://sub_viewport.gd" id="1_p51at"]
[ext_resource type="Script" uid="uid://dhkfkfsn70j7h" path="res://camera_3d.gd" id="2_a0tk4"]
[ext_resource type="Script" uid="uid://egigl0fe7y48" path="res://world_environment.gd" id="2_ed37m"]
[ext_resource type="Shader" uid="uid://ujgrjmbl6yoi" path="res://shader/aurora_spatial.gdshader" id="2_noarx"]
[ext_resource type="Texture2D" uid="uid://bvkadr4u7em5l" path="res://shader/dither/palette_worm.png" id="2_v6v6d"]
[ext_resource type="Texture2D" uid="uid://3uyryded1pp3" path="res://shader/dither/bayer16tile2.png" id="3_ijjhg"]
[ext_resource type="AudioStream" uid="uid://c26kmyrltj3cw" path="res://audio/music/carakacha-slowed.ogg" id="4_nr6g6"]
[ext_resource type="Texture2D" uid="uid://cupfhfjb3ce3m" path="res://porthole_left.png" id="7_tcnuu"]
[ext_resource type="Texture2D" uid="uid://bpwt1mts0tke8" path="res://porthole_right.png" id="8_tuemg"]
[ext_resource type="Texture2D" uid="uid://bhqy5ji37ty6t" path="res://Sprite-3-export.png" id="9_i0g27"]
[ext_resource type="AudioStream" uid="uid://bxl7ch3wpwaa7" path="res://audio/sfx/freesound_community-rocket-engine-90835.mp3" id="9_tbq6e"]
[ext_resource type="Texture2D" uid="uid://cxo7n5f0sax8e" path="res://barcode-green-numbers.png" id="10_ealrb"]
[ext_resource type="AudioStream" uid="uid://nhxlj2i8gmqa" path="res://audio/sfx/tanweraman-dark-rumble-tension-370005.mp3" id="10_ppcpe"]
[ext_resource type="Script" uid="uid://pqe1m2bq2ns0" path="res://message_bank.gd" id="13_wlxy5"]
[ext_resource type="Script" uid="uid://c5fdh4vkw6t8p" path="res://message.gd" id="14_3v7ru"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_a0tk4"]
panorama = ExtResource("1_a202f")

[sub_resource type="Sky" id="Sky_a0tk4"]
sky_material = SubResource("PanoramaSkyMaterial_a0tk4")

[sub_resource type="Environment" id="Environment_r3fl7"]
background_mode = 2
sky = SubResource("Sky_a0tk4")
tonemap_mode = 2
glow_enabled = true
glow_intensity = 1.63
glow_strength = 0.65
glow_bloom = 0.63
glow_blend_mode = 1
volumetric_fog_enabled = true
volumetric_fog_albedo = Color(0.796243, 0.796243, 0.796243, 1)
volumetric_fog_emission_energy = 0.0
volumetric_fog_anisotropy = 0.0

[sub_resource type="Animation" id="Animation_m1wa3"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(20.4441, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.811617, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-83.0445, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_05jjx"]
resource_name = "flashes"
length = 30.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(20.4441, -0.25, 0, 0.25, 0, 32.8806, -0.25, 0, 0.25, 0, -28.8874, -0.25, 0, 0.25, 0, -7.53806, -0.25, 0, 0.25, 0, 22.1023, -0.25, 0, 0.25, 0, 22.1023, -0.25, 0, 0.25, 0, -15.6218, -0.25, 0, 0.25, 0, 24.7969, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3.76667, 7.33333, 12.0333, 15.8667, 19.7667, 24.2667, 30)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.811617, -0.25, 0, 0.25, 0, -0.811617, -0.25, 0, 0.25, 0, -0.811617, -0.25, 0, 0.25, 0, -0.811617, -0.25, 0, 0.25, 0, -0.811617, -0.25, 0, 0.25, 0, -0.811617, -0.25, 0, 0.25, 0, -0.811617, -0.25, 0, 0.25, 0, -0.811617, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3.76667, 7.33333, 12.0333, 15.8667, 19.7667, 24.2667, 30)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(-83.0445, -0.25, 0, 0.25, 0, -112.685, -0.25, 0, 0.25, 0, -81.8009, -0.25, 0, 0.25, 0, -94.6519, -0.25, 0, 0.25, 0, -92.9937, -0.25, 0, 0.25, 0, -114.136, -0.25, 0, 0.25, 0, -93.4083, -0.25, 0, 0.25, 0, -91.3355, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3.76667, 7.33333, 12.0333, 15.8667, 19.7667, 24.2667, 30)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_471yc"]
_data = {
&"RESET": SubResource("Animation_m1wa3"),
&"flashes": SubResource("Animation_05jjx")
}

[sub_resource type="Animation" id="Animation_a0tk4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.58628, 0, -104.263)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -2.36398, 0)]
}

[sub_resource type="Animation" id="Animation_noarx"]
resource_name = "glide"
length = 20.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.58628, 0, -104.263), Vector3(1.58628, 0, -44.6353)]
}

[sub_resource type="Animation" id="Animation_ohxil"]
resource_name = "spin"
length = 240.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 156.133),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -2.36398, 0), Vector3(0, -2.36318, 6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3fl7"]
_data = {
&"RESET": SubResource("Animation_a0tk4"),
&"glide": SubResource("Animation_noarx"),
&"spin": SubResource("Animation_ohxil")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_r3fl7"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jka67"]
noise = SubResource("FastNoiseLite_r3fl7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_noarx"]
render_priority = 0
shader = ExtResource("2_noarx")
shader_parameter/speed = 0.003
shader_parameter/color = Color(0.94902, 0.862745, 0.729412, 1)
shader_parameter/emission_strength = 2.0
shader_parameter/noise = SubResource("NoiseTexture2D_jka67")
shader_parameter/offset = 0.0
shader_parameter/smoothness = 0.15
shader_parameter/distort = 1.0
shader_parameter/scale = 0.1
shader_parameter/STEP = 0.01
shader_parameter/BASE_DENSITY = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_jka67"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ufg7"]
render_priority = 0
shader = ExtResource("2_noarx")
shader_parameter/speed = 0.01
shader_parameter/color = Color(0.94902, 0.862745, 0.729412, 1)
shader_parameter/emission_strength = 2.0
shader_parameter/noise = SubResource("NoiseTexture2D_jka67")
shader_parameter/offset = 0.0
shader_parameter/smoothness = 0.15
shader_parameter/distort = 1.0
shader_parameter/scale = 0.1
shader_parameter/STEP = 0.01
shader_parameter/BASE_DENSITY = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ls7qt"]
render_priority = 0
shader = ExtResource("2_noarx")
shader_parameter/speed = 0.01
shader_parameter/color = Color(0.94902, 0.862745, 0.729412, 1)
shader_parameter/emission_strength = 2.0
shader_parameter/noise = SubResource("NoiseTexture2D_jka67")
shader_parameter/offset = 0.0
shader_parameter/smoothness = 0.15
shader_parameter/distort = 1.0
shader_parameter/scale = 0.1
shader_parameter/STEP = 0.01
shader_parameter/BASE_DENSITY = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4s8fu"]
render_priority = 0
shader = ExtResource("2_noarx")
shader_parameter/speed = 0.01
shader_parameter/color = Color(0.94902, 0.862745, 0.729412, 1)
shader_parameter/emission_strength = 1.0
shader_parameter/noise = SubResource("NoiseTexture2D_jka67")
shader_parameter/offset = 0.0
shader_parameter/smoothness = 0.15
shader_parameter/distort = 1.0
shader_parameter/scale = 0.1
shader_parameter/STEP = 0.01
shader_parameter/BASE_DENSITY = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_lbahe"]
top_radius = 1.81
bottom_radius = 0.937

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a0tk4"]
render_priority = 0
shader = ExtResource("2_noarx")
shader_parameter/speed = 0.003
shader_parameter/color = Color(0.94902, 0.862745, 0.729412, 1)
shader_parameter/emission_strength = 2.0
shader_parameter/noise = SubResource("NoiseTexture2D_jka67")
shader_parameter/offset = 0.0
shader_parameter/smoothness = 0.15
shader_parameter/distort = 1.0
shader_parameter/scale = 0.1
shader_parameter/STEP = 0.01
shader_parameter/BASE_DENSITY = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8s50l"]
render_priority = 0
shader = ExtResource("2_noarx")
shader_parameter/speed = 0.003
shader_parameter/color = Color(0.94902, 0.862745, 0.729412, 1)
shader_parameter/emission_strength = 1.0
shader_parameter/noise = SubResource("NoiseTexture2D_jka67")
shader_parameter/offset = 0.0
shader_parameter/smoothness = 0.15
shader_parameter/distort = 1.0
shader_parameter/scale = 0.1
shader_parameter/STEP = 0.01
shader_parameter/BASE_DENSITY = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bvgs4"]
shader = ExtResource("1_ogsp2")
shader_parameter/u_dither_tex = ExtResource("3_ijjhg")
shader_parameter/u_color_tex = ExtResource("2_v6v6d")
shader_parameter/u_bit_depth = 64
shader_parameter/u_contrast = 1.0
shader_parameter/u_offset = 0.0
shader_parameter/u_dither_size = 2

[sub_resource type="ViewportTexture" id="ViewportTexture_weajq"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="Animation" id="Animation_ij337"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0uhaa"]
resource_name = "new_animation"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.356863)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(0.183011, 1),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mxww"]
_data = {
&"RESET": SubResource("Animation_ij337"),
&"new_animation": SubResource("Animation_0uhaa")
}

[sub_resource type="LabelSettings" id="LabelSettings_cdqbm"]
font_size = 25

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("world_environment", "omni_light_3d", "camera_3d", "timer")]
script = ExtResource("1_c3trs")
world_environment = NodePath("SubViewportContainer/SubViewport/WorldEnvironment")
omni_light_3d = NodePath("SubViewportContainer/SubViewport/OmniLight3D")
camera_3d = NodePath("SubViewportContainer/SubViewport/Camera3D")
timer = NodePath("Timer")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4
script = ExtResource("1_p51at")

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_r3fl7")
script = ExtResource("2_ed37m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.707107, 0.612373, -0.353553, 2.78059e-08, 0.5, 0.866026, 0.707107, -0.612372, 0.353553, 0.174406, 0, -1.32475)
shadow_enabled = true

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.712591, 0, -0.70158, 0, 1, 0, 0.70158, 0, -0.712591, 20.4441, -0.811617, -83.0445)
omni_range = 14.987
omni_attenuation = 1.091

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/OmniLight3D"]
libraries = {
&"": SubResource("AnimationLibrary_471yc")
}
autoplay = "flashes"

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.7125906, 0, -0.7015802, 0, 1, 0, 0.7015802, 0, -0.7125906, 1.58628, 0, -104.263)
near = 0.001
far = 10000.0
script = ExtResource("2_a0tk4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubViewportContainer/SubViewport/Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_r3fl7")
}

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(5.58424, 18.801, -125.082, -2.44584, 57.3825, -135.897, 1.12934, 31.3094, 324.177, 35.673, -45.4802, 25.5678)
material_override = SubResource("ShaderMaterial_noarx")
mesh = SubResource("CylinderMesh_jka67")
skeleton = NodePath("../../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-121.415, -12.7679, -133.251, 41.7829, -57.8215, -102.678, -36.7076, -23.5844, 323.871, 226.12, 89.6962, 64.7489)
material_override = SubResource("ShaderMaterial_8ufg7")
mesh = SubResource("CylinderMesh_jka67")
skeleton = NodePath("../../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-22.5202, 7.19747, -357.359, 33.7642, -60.8844, -56.093, -127.231, -17.4313, 48.3675, 223.094, 89.6962, 486.511)
material_override = SubResource("ShaderMaterial_ls7qt")
mesh = SubResource("CylinderMesh_jka67")
skeleton = NodePath("../../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-219.649, -17.4309, -957.574, 70.5079, -150.087, -242.828, -156.706, -43.0975, 1232.94, 740.695, 588.886, 1096.09)
material_override = SubResource("ShaderMaterial_4s8fu")
mesh = SubResource("CylinderMesh_jka67")
skeleton = NodePath("../../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(4176.3, 330.754, 2570.36, -903.803, 1661.91, -392.083, -2596.47, -46.4902, 4270.78, 5048.84, -3608.59, 2473.01)
material_override = SubResource("ShaderMaterial_4s8fu")
mesh = SubResource("CylinderMesh_lbahe")
skeleton = NodePath("../../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(358.554, 83.3232, 439.186, 111.99, -269.026, 133.092, -234.743, -1.07482, 734.32, -178.814, 89.6962, 883.825)
material_override = SubResource("ShaderMaterial_a0tk4")
mesh = SubResource("CylinderMesh_jka67")
skeleton = NodePath("../../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-401.88, -50.3837, 329.561, 111.99, -269.026, 133.092, -148.855, -66.3731, -789.62, 717.689, -430.487, 1262.48)
material_override = SubResource("ShaderMaterial_8s50l")
mesh = SubResource("CylinderMesh_jka67")
skeleton = NodePath("../../..")

[node name="Control" type="Control" parent="SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -564.0
offset_right = 239.0
offset_bottom = 497.0
grow_vertical = 2
texture = ExtResource("7_tcnuu")

[node name="TextureRect2" type="TextureRect" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -557.0
offset_right = 106.0
offset_bottom = 504.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("8_tuemg")

[node name="TextureRect3" type="TextureRect" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_left = -29.999996
offset_top = -36.999996
offset_right = 54.000004
offset_bottom = 68.0
rotation = 0.3417818
texture = ExtResource("9_i0g27")

[node name="TextureRect4" type="TextureRect" parent="SubViewportContainer/SubViewport/Control"]
layout_mode = 0
offset_left = 1037.0
offset_top = -6.0000305
offset_right = 1123.0
offset_bottom = 42.99997
rotation = 0.6544738
texture = ExtResource("10_ealrb")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
material = SubResource("ShaderMaterial_bvgs4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_weajq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/TextureRect"]
libraries = {
&"": SubResource("AnimationLibrary_7mxww")
}
speed_scale = 0.3

[node name="AudioMusic" type="AudioStreamPlayer" parent="Control/TextureRect"]
stream = ExtResource("4_nr6g6")

[node name="AudioAmbienceRocket" type="AudioStreamPlayer" parent="Control/TextureRect"]
stream = ExtResource("9_tbq6e")
volume_db = -10.0
autoplay = true
bus = &"sfx_ship"

[node name="AudioAmbienceRumble" type="AudioStreamPlayer" parent="Control/TextureRect"]
stream = ExtResource("10_ppcpe")
volume_db = 10.0
autoplay = true
bus = &"sfx_ship"

[node name="MessageBank" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -92.0
offset_right = 497.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("13_wlxy5")

[node name="Label" type="Label" parent="Control/MessageBank"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "[outgoing] its so grey outside
[outgoing] feels like we've been climbing forever
"
label_settings = SubResource("LabelSettings_cdqbm")

[node name="Timer" type="Timer" parent="Control/MessageBank"]

[node name="Message" type="Node" parent="Control/MessageBank" groups=["message"]]
script = ExtResource("14_3v7ru")
text = "its so grey outside"
incoming = false

[node name="Message2" type="Node" parent="Control/MessageBank" groups=["message"]]
script = ExtResource("14_3v7ru")
text = "feels like we've been climbing forever"
delay_time = 1.0
incoming = false

[node name="Message3" type="Node" parent="Control/MessageBank" groups=["message"]]
script = ExtResource("14_3v7ru")
text = "you have to ascend slowly, otherwise the cloud pressure might tear your craft apart"

[node name="CSGSphere3D" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -599.411)
radius = 46.1677

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Control/MessageBank/Timer" to="Control/MessageBank" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
